backtotop button on mobile view is fixed.

--- a/components/BackToTop/BackToTop.module.css
+++ b/components/BackToTop/BackToTop.module.css
@@ -37,3 +37,15 @@
 .button:hover {
   transform: translateY(-4px);
 }
+
+@media (max-width: 600px) {
+  .button {
+
+  right: 2.5rem;
+  bottom: 2rem;
+
+  width: 35px;
+  height: 35px;
+  }
+
+}
